# eda-1

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
exercises/01/a/: code.c
exercises/01/b/: code.c
exercises/01/b/inputs/: 03.txt
exercises/01/c/: code.c
exercises/01/d/: ans.txt  code.c
exercises/01/d/inputs/: 03.txt
exercises/01/distancia_de_manhattan/: ans.txt  code.c
exercises/01/e/: code.c  test.sh
exercises/01/f/: ans.txt  code.c
exercises/01/g/: ans.txt  code.c
exercises/01/g/inputs/: 02.txt  03.txt
exercises/01/h/: code.c
exercises/01/i/: code.c
exercises/01/i/inputs/: 02.txt  03.txt
exercises/01/j/: ans.txt  code.c
exercises/01/l/: code.c
exercises/01/m/: code.c
exercises/01/n/: ans.txt  code.c
exercises/01/n/inputs/: 01.txt  02.txt
exercises/01/o/: ans.txt  code.c
exercises/01/ola_mundo/: code.c
exercises/01/p/: ans.txt  code.c
exercises/01/p/inputs/: 01.txt
exercises/01/pedagio/: ans.txt  code.c
exercises/01/pedagio/inputs/: 02.txt
exercises/01/q/: ans.txt  code.c
exercises/01/r/: ans.txt  code.c
exercises/01/r/inputs/: 01.txt  02.txt
exercises/01/s/: ans.txt  code.c
exercises/01/t/: code.c
exercises/01/t/inputs/: 01.txt
exercises/01/transporte/: code.c
exercises/01/u/: ans.txt  code.c
exercises/01/v/: ans.txt  code.c
exercises/01/x/: ans.txt  code.c
exercises/01/z/: ans.txt  code.c
exercises/01/zerinho_ou_um/: ans.txt
exercises/02/a/: code.c
exercises/02/b/: ans.txt  code.c
exercises/02/c/: code.c
exercises/05/a/: ans.txt  code.c
(+16 files in other folders)
